--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/fzdxtuxa/x513e" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/fzdxtuxa/v11a" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/fzdxtuxa/l12z" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/fzdxtuxa/i8d" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/fzdxtuxa/z4t" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/fzdxtuxa/c12p" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/fzdxtuxa/c3f" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/fzdxtuxa/p10h" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/fzdxtuxa/v9h" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/fzdxtuxa/b7x" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/fzdxtuxa/q5f" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/ezcmybiqx/y513q" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/ezcmybiqx/a11h" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/ezcmybiqx/z12s" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/ezcmybiqx/v8u" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/ezcmybiqx/p4j" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/ezcmybiqx/j12f" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/ezcmybiqx/q3s" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/ezcmybiqx/z10h" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/ezcmybiqx/i9p" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/ezcmybiqx/r7r" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/ezcmybiqx/w5m" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245147.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-75960147-FBI-600x400-320x200.jpg"><p align="center">华裔知名学者隐瞒千人计划 回国途中被捕</p></a>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245147.md#1" title="华裔知名学者隐瞒千人计划 回国途中被捕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-75960147-FBI-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244653.md#1" title="美国制裁新疆公安厅和四名高官 冻结财产""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1052866522-600x400-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12242848.md#1" title="沈舟：FBI局长揭示中共的全面冷战渗透""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/a3-1@1200x1200-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243056.md#1" title="湖北江西现河堤溃口 千岛湖泄洪量达76西湖""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/2-11-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ttfgmz3323.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245205.md#1">陈全国被美制裁 制造多少惨案鲜为人知？</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245108.md#1">美籍富商丈夫惊爆破产 港女星叶玉卿回应</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245131.md#1">【新闻看点】川普连出重手 习近平再设安全组？</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/10/n12245360.md#1">白宫幕僚长：会有关于香港行政令出台</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245205.md#1">陈全国被美制裁 制造多少惨案鲜为人知？</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245108.md#1">美籍富商丈夫惊爆破产 港女星叶玉卿回应</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245131.md#1">【新闻看点】川普连出重手 习近平再设安全组？</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245248.md#1">【美股瞭望】拜登选情引起资本市场疑虑</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244997.md#1">什么叫真爱国：陌生军人叠好受损国旗</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245183.md#1">美国务院：北京应与美方就军备控制问题会谈</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244997.md#1">什么叫真爱国：陌生军人叠好受损国旗</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241667.md#1">贵州公交司机疑报复社会 中共禁媒体报导真相</a><br>
@@ -42,21 +42,21 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,592,451 人
+!共 359,594,699 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244813.md#1">中共外长发求和信号？美国制裁中共4高官</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242684.md#1">王友群：中共正处在最后解体的前夜</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243557.md#1">陈思敏：公安系统3人同日落马 赵乐际要当心</a><br>
-<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243659.md#1">内斗清洗不断 中共政法委再次“清理门户”</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244528.md#1">美国务院禁陈全国等三名高官及家人进入美国</a><br>
-<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241166.md#1">【内幕】文件泄中共防疫 严控国民回国</a><br>
+<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243659.md#1">内斗清洗不断 中共政法委再次“清理门户”</a><br>
+<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245205.md#1">陈全国被美制裁 制造多少惨案鲜为人知？</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245131.md#1">【新闻看点】川普连出重手 习近平再设安全组？</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12240040.md#1">中共强推港版国安法 触发中国人退党</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244263.md#1">中共前官员提做六大准备 学者：绝望准备后事</a><br>
-<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245205.md#1">陈全国被美制裁 制造多少惨案鲜为人知？</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244716.md#1">李克强贵州考察时 多人高喊“就业难”</a><br>
+<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241166.md#1">【内幕】文件泄中共防疫 严控国民回国</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242681.md#1">【新闻看点】A股飙升内幕 金融战下的布局？</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245108.md#1">美籍富商丈夫惊爆破产 港女星叶玉卿回应</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245029.md#1">【役情最前线】驻港国安公署成防疫漏洞？</a><br>
@@ -64,7 +64,6 @@
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244501.md#1">【重播】川普签署《拉美裔繁荣倡议》行政令</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244638.md#1">山西警方速结投毒杀人案 “凶手”申冤15年</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244581.md#1">【直播】白宫媒体简报会：单日确诊超6万</a><br>
-<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243809.md#1">709律师呼吁大陆民众 克服恐惧 表达诉求</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241991.md#1">起诉江泽民 法轮功学员占庆荣被枉刑3年</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243001.md#1">【拍案惊奇】习政敌谋划溃坝？中共猎狐打异己</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242228.md#1">邓紫棋拿麦克风飙高音 罩中的玻璃杯瞬间炸裂</a><br>
@@ -104,8 +103,9 @@
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/6/n12236492.md#1">【一线采访】黄山多乡镇淹水断路 景点关闭</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/6/n12236557.md#1">白宫幕僚长：川普正考虑签署对华行政令</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/6/n12236051.md#1">清华教授许章润突被抓 曾多次批中共高层</a><br>
+<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/5/n12234872.md#1">TVB祭加辣条款 郑敬基：前所未有的白色恐怖</a><br>
 <br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239627.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Screen-Shot-2020-07-07-at-3.27.32-PM-320x200.png"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239627.md#1">关于翻墙软件 大法信息中心吁纠正错误报导</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244206.md#1">709事件五周年 陆委会呼吁：释放维权人士</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244335.md#1">公务员职位疑遭顶包 女子柔道亚军求助无门</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243124.md#1">田云：709大抓捕5周年 世界应制止中共行恶</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245058.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/01/1601030926471528-320x200.jpg"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245058.md#1">陆千亿房企270亿债逾期 楼盘停工涉上千业主</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244770.md#1">传意大利电信在本土和巴西5G核心中排除华为</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244796.md#1">抄袭成风 大陆山寨版劳斯莱斯横行街头</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244341.md#1">“天天涨” 6月大陆猪肉价格同比涨81.6%</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243581.md#1">忧资金进入？大陆多地升级对楼市调控</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244085.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1222894281-320x200.jpg"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244085.md#1">回应国安法 新西兰将重审与香港关系和政策</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243992.md#1">学者：港国安法建柏林墙 美欧应发出强硬讯号</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244260.md#1">五眼国家商讨香港问题 澳新重审与港关系</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243994.md#1">受贿1.07亿 海口市委前书记张琦受审</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/2/n12227709.md#1">美国加速与中俄的太空军事竞赛</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243256.md#1">湖北官员廖明国在荆门市老市委大院坠亡</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245128.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/44675d75b17f948d708269ddbf92a9e7-320x200.png"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245128.md#1">中共病毒疫情中心湖北省面临大洪水灾难</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243750.md#1">【视频】武夷山暴雨洪灾 景区关闭 全市停水</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241977.md#1">【重播】白宫简报会：学校必须开放 如何进行</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245054.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/04/2e635c78110173bde709f8be09c198c7-320x200.jpg"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245054.md#1">中共数据安全法控外企 律师：以国安名义扩张</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多个情妇</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243214.md#1">广州多家华为手机店诱骗顾客预存电话费后“倒闭”</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/5/n12234607.md#1">偶像剧导演杨冠玉骤逝 林依晨等艺人悼念</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239627.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Screen-Shot-2020-07-07-at-3.27.32-PM-320x200.png"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239627.md#1">关于翻墙软件 大法信息中心吁纠正错误报导</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244206.md#1">709事件五周年 陆委会呼吁：释放维权人士</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244335.md#1">公务员职位疑遭顶包 女子柔道亚军求助无门</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243124.md#1">田云：709大抓捕5周年 世界应制止中共行恶</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245058.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/01/1601030926471528-320x200.jpg"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245058.md#1">陆千亿房企270亿债逾期 楼盘停工涉上千业主</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244770.md#1">传意大利电信在本土和巴西5G核心中排除华为</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244796.md#1">抄袭成风 大陆山寨版劳斯莱斯横行街头</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244341.md#1">“天天涨” 6月大陆猪肉价格同比涨81.6%</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243581.md#1">忧资金进入？大陆多地升级对楼市调控</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/10/n12245360.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/000_1QR55C-320x200.jpg"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/10/n12245360.md#1">白宫幕僚长：会有关于香港行政令出台</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244085.md#1">回应国安法 新西兰将重审与香港关系和政策</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243992.md#1">学者：港国安法建柏林墙 美欧应发出强硬讯号</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244260.md#1">五眼国家商讨香港问题 澳新重审与港关系</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243994.md#1">受贿1.07亿 海口市委前书记张琦受审</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/2/n12227709.md#1">美国加速与中俄的太空军事竞赛</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245128.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/44675d75b17f948d708269ddbf92a9e7-320x200.png"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245128.md#1">中共病毒疫情中心湖北省面临大洪水灾难</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243750.md#1">【视频】武夷山暴雨洪灾 景区关闭 全市停水</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241977.md#1">【重播】白宫简报会：学校必须开放 如何进行</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245054.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/04/2e635c78110173bde709f8be09c198c7-320x200.jpg"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245054.md#1">中共数据安全法控外企 律师：以国安名义扩张</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多个情妇</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243214.md#1">广州多家华为手机店诱骗顾客预存电话费后“倒闭”</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/5/n12234607.md#1">偶像剧导演杨冠玉骤逝 林依晨等艺人悼念</a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/6/5/n12165121.md#1">【独家】北京卫戍区民兵花名册透露秘密</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/2/n12226681.md#1">监控民众不力 河北两商场遭中共内部通报</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/2/n12225939.md#1">【内幕】川习较劲 李克强率先对美释求和信号</a><br>
